--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Super Wachtelei Jump!</title>
+    <title>Super Wachtelei Jump!!!</title>
     <style>
         body {
             background-color: #121212;
